--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,11 @@
 		"psr-0": {
 			"Torann\\Assets": "src/"
 		}
-	}
+	},
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1-dev"
+        }
+    },
+    "minimum-stability": "dev"
 }
