--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
 	"autoload": {
 		"psr-0": {
 			"Torann\\Assets": "src/"
-		}
+        },
+        "files": [
+            "src/helpers.php"
+        ]
 	},
     "extra": {
         "branch-alias": {
