--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
 	"require": {
 		"php": ">=5.3.0",
-		"illuminate/support": "4.x",
+		"illuminate/support": "4.1.*",
         "illuminate/console": "4.1.*",
         "leafo/lessphp": "v0.4.0",
 		"mrclay/minify": "dev-master"
