--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,18 @@
     "name": "torann/assets",
     "description": "Simple asset management for Laravel 4.",
     "keywords": ["laravel", "laravel4", "assets", "asset management", "asset pipeline", "pipeline"],
-	"license": "BSD 2-Clause",
+    "license": "BSD 2-Clause",
     "authors": [
         {
             "name": "Daniel Stainback",
             "email": "daniel@lyften.com"
         }
-    ],
+     ],
 	"require": {
 		"php": ">=5.3.0",
-		"illuminate/support": "4.1.*",
-        "illuminate/console": "4.1.*",
-        "leafo/lessphp": "v0.4.0",
+		"illuminate/support": "~4.1",
+        	"illuminate/console": "~4.1",
+        	"leafo/lessphp": "v0.4.0",
 		"mrclay/minify": "dev-master"
 	},
 	"autoload": {
