--- a/composer.json
+++ b/composer.json
@@ -9,21 +9,21 @@
             "email": "daniel@lyften.com"
         }
      ],
-	"require": {
-		"php": ">=5.3.0",
-		"illuminate/support": "~4.1",
-        	"illuminate/console": "~4.1",
-        	"leafo/lessphp": "v0.4.0",
-		"mrclay/minify": "dev-master"
-	},
-	"autoload": {
-		"psr-0": {
-			"Torann\\Assets": "src/"
+    "require": {
+        "php": ">=5.3.0",
+        "illuminate/support": "~4.1",
+        "illuminate/console": "~4.1",
+        "oyejorge/less.php": "~1.5",
+        "mrclay/minify": "dev-master"
+    },
+    "autoload": {
+        "psr-0": {
+            "Torann\\Assets": "src/"
         },
         "files": [
             "src/helpers.php"
         ]
-	},
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "0.1-dev"
